# sensorwatch

./: .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRE-MERGE-CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  config.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  fuzz.yml  publish-crates.yml  publish-testpypi.yml  publish.yml
cmake/: sensorwatchConfig.cmake.in
docs/: C_ABI.md  C_CODING_STANDARDS.md  agent-monitoring.md  pilot-field-report.md  running-from-wsl2.md
examples/c/: sw_dump.c
examples/demo/: README.md  demo.toml  make_demo_gif.py  sensors_demo.jsonl
examples/monitor-setup/: PILOT_TEST_PLAN.md  README.md  config.toml  notify.toml
examples/psu-efficiency/: README.md  efficiency_test_2026_02_18.jsonl  efficiency_test_2026_02_18.parquet
include/sensorwatch/: sensorwatch.h  sensorwatch.hpp
rust/: Cargo.toml
rust/sensorwatch/: Cargo.toml  README.md
rust/sensorwatch-cli/: Cargo.toml  README.md
rust/sensorwatch-cli/fuzz/: Cargo.toml
rust/sensorwatch-cli/fuzz/corpus/fixup_python_tokens/: bare_nan  escaped_quote  infinities  invalid_utf8  token_in_string
rust/sensorwatch-cli/fuzz/corpus/parse_line/: crlf  invalid_utf8  missing_values  nested  python_non_finite  token_in_string  valid_offset_negative  valid_voltage
rust/sensorwatch-cli/fuzz/fuzz_targets/: fixup_python_tokens.rs  parse_line.rs
rust/sensorwatch-cli/src/: cli.rs  config.rs  digest.rs  e2e.rs  engine.rs  event.rs  exit.rs  export.rs  fuzz.rs  jsonl.rs  labels.rs  lib.rs  limits.rs  logger.rs  main.rs  render.rs  replay.rs  report.rs  rules.rs  snapshot.rs  source.rs  testutil.rs  watch.rs
rust/sensorwatch-cli/tests/: export_cli.rs  log_cli.rs  report_cli.rs  snapshot_cli.rs  watch_cli.rs
rust/sensorwatch-cli/tests/common/: mod.rs
rust/sensorwatch-cli/tests/golden/: generate_fixture.py  sensors_2026-02-18.jsonl  sensors_2026-02-19.jsonl
rust/sensorwatch-sys/: Cargo.toml  README.md  build.rs  regen-bindings.sh  wrapper.h
rust/sensorwatch-sys/src/: bindings.rs  lib.rs
rust/sensorwatch/src/: lib.rs
rust/sensorwatch/tests/: integration.rs
rust/sensorwatch/tests/common/: mod.rs
sensorwatch/: __init__.py  __main__.py  _native.py  _native_build.py  config.py  hwinfo_shm.py  logger.py  native.py
skills/sensorwatch/: SKILL.md
skills/sensorwatch-monitor/: SKILL.md
skills/sensorwatch-monitor/agents/: openai.yaml
skills/sensorwatch-monitor/scripts/: _state.py  ack_event.py  escalation_gate.py  heartbeat.py  init_state.py  notify.py  open_incident.py  reconcile_incidents.py  state_summary.py
skills/sensorwatch-monitor/templates/: bootstrap.md  incident.md
skills/sensorwatch/agents/: openai.yaml
skills/sensorwatch/scripts/: snapshot.py
src/: sw_error.c  sw_internal.h  sw_parse.c  sw_platform.h  sw_session.c  sw_snapshot.c  sw_string.c
tests/: test_config.py  test_hwinfo_shm.py  test_logger.py  test_monitor_scripts.py  test_native.py
tests/c/: abi_header_check.cpp  sw_test_util.c  sw_test_util.h  test_error.c  test_parse.c  test_session.c  test_snapshot.c
tests/consumer/: CMakeLists.txt  main.c  main.cpp
tests/cpp/: test_wrapper.cpp
tests/fixtures/digests/: README.md  gappy-feed.json  psu-sag-recovered.json  psu-sag-stale-feed.json  psu-sag-still-firing.json  zero-samples.json
tests/fixtures/events/: README.md  cleared.json  fired-critical-threshold.json  source-unavailable.json
tests/fuzz/: README.md  fuzz_parse.c  gen_corpus.c
